# Outpost-AI

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW_SPRINT_1.md  DELIVERY_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SPRINT_PROGRESS.md  development_plan.md  docker-compose.staging.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  technical_architecture.md  tsconfig.json  turbo.json
backend/: .env.local.example  Dockerfile  MIGRATION_GUIDE.md  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  run_celery.sh  sprint5_preflight_report.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_business_tables.py  003_add_pdf_vision_data.py  004_add_knowledge_documents_table.py  005_add_conversation_messages_and_notifications.py  006_add_video_localization_status.py  007_add_heygen_usage_records.py  008_sprint7_outbound_contacts_linkedin_sequences.py  009_sprint8_email_sequences_unified_leads.py  010_sprint9_content_items_enhanced.py  011_sprint10_search_messaging.py  012_sprint11_subscriptions.py  013_sprint12_advanced_features.py
backend/app/: __init__.py  celery.py  celery_app.py  config.py  database.py  dependencies.py  main.py  schemas.py  security.py  sentry_init.py  socket_server.py  task_utils.py
backend/app/models/: __init__.py  api_usage_record.py  base.py  business_card.py  buyer.py  content_item.py  conversation.py  direct_message.py  (+21 more)
backend/scripts/: score_rfq.py  sprint5_live_validation.py  sprint5_preflight_check.py
backend/tests/: conftest.py  test_ai_avatar_quality_benchmark.py  test_ai_avatar_quality_benchmark_mock.py  test_apollo_service.py  test_auth.py  test_claude_rfq_parsing.py  test_draft_reply_generator.py  test_knowledge_base_api.py  test_knowledge_base_chat_api.py  test_lead_scoring.py  test_notifications_api.py  test_pdf_parsing.py  test_pinecone_knowledge_service.py  test_rag_chat_service.py  test_rfq_parsing_accuracy.py  test_rfq_pipeline.py  test_rfqs.py  test_slack_service.py  test_sprint10_e2e.py  test_sprint11_e2e.py  test_sprint12_e2e.py  test_sprint5_e2e_flow.py  test_sprint6_e2e.py  test_sprint7_e2e.py  test_sprint8_e2e.py  test_sprint9_e2e.py  test_suppliers.py  test_uploads.py  test_video_multilingual_pipeline.py  test_video_transcription_task.py  test_videos.py  test_videos_transcription_trigger.py  test_visitor_enrichment_service.py  test_visitor_intent_api.py  test_visitor_intent_service.py  test_visitor_intent_task_pipeline.py
(+224 files in other folders)
